# OpenGLCourse

./: CMakeLists.txt  main.cpp
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake
include/glad/: gl.h
lib/GLFW/: glfw3.lib
lib/assimp/: assimp-vc143-mtd.exp
src/: camera.h  mesh.h  model.h  shader.h  texture.h
